[package]
name = "sensor"
version = "0.1.0"
edition = "2021"
default-run = "sensor"

[features]
default = ["mmap", "rayon"]
#default = ["mmap"]
#default = ["rayon"]
#default = []

humidity = []
mmap = ["dep:memmap2"]
rayon = ["dep:rayon"]  # Parallel iterators

[profile.release]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.10.0"
#egui = "0.24.1"
#egui_tiles = "0.4.0"
memmap2 = { version = "0.9.5", optional = true }
rayon = { version = "1.10.0", optional = true }

## Optimize all dependencies even in debug builds:
#[profile.dev.package."*"]
#opt-level = 2


# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
